@@ -1,3 +1,7 @@
+Summary of important user-visible changes for Windows 1.3.0+
+------------------------------------------------------------
+  ** updated configure files for 5.0 octave function changes
+
 Summary of important user-visible changes for Windows 1.3.0
 ------------------------------------------------------------
   ** updated configure files for 4.4 octave
